--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "mocha": "^10.2.0",
     "node": "^19.3.0",
+    "ts-mock-imports": "^1.3.8",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
