--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
       "watch": true,
       "allowSyntheticDefaultImports": true,
       "esModuleInterop": true,
-    }
+      "moduleResolution": "node"
+    },
+    "exclude": ["*.test.ts"]
   }
