--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsnd --respawn src/index.ts",
-    "test": "mocha -r ts-node/register src/test/*.test.ts"
+    "test": "mocha -r ts-node/register src/**.test.ts"
   },
   "author": "",
   "license": "ISC",
@@ -16,11 +16,13 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.18",
     "@types/pg": "^8.6.6",
+    "@types/supertest": "^2.0.12",
     "chai": "^4.3.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mocha": "^10.2.0",
     "node": "^19.3.0",
+    "supertest": "^6.3.3",
     "ts-mock-imports": "^1.3.8",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
