--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
       "esModuleInterop": true,
       "moduleResolution": "node"
     },
-    "exclude": ["*.test.ts"]
+    "exclude": ["**/*.test.ts"]
   }
