--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "tsnd --respawn src/index.ts",
-    "test": "mocha -r ts-node/register src/**.test.ts"
+    "test": "mocha -r ts-node/register src/**.test.ts",
+    "lint": "eslint src/**/*.ts"
+
+    
   },
   "author": "",
   "license": "ISC",
@@ -17,8 +20,11 @@
     "@types/node": "^18.11.18",
     "@types/pg": "^8.6.6",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "chai": "^4.3.7",
     "cors": "^2.8.5",
+    "eslint": "^8.33.0",
     "express": "^4.18.2",
     "mocha": "^10.2.0",
     "node": "^19.3.0",
@@ -29,7 +35,10 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0"
   }
 }
