--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ POSTGRES_LOCAL_USER=postgres
 
 
 POSTGRES_PORT=5432
-POSTGRES_DATABASE=wordle_sfvy
-POSTGRES_HOST=dpg-ch95cjdgk4qeoo2f3o60-a.frankfurt-postgres.render.com
-POSTGRES_PASS=h5Kn4TydT5j2O5CPuAdaBVWXxPHc2p1N
-POSTGRES_USER=postgres1
-POSTGRES_Internal_Database_URL=postgres://postgres1:h5Kn4TydT5j2O5CPuAdaBVWXxPHc2p1N@dpg-ch95cjdgk4qeoo2f3o60-a/wordle_sfvy
-POSTGRES_External_Database_URL=postgres://postgres1:h5Kn4TydT5j2O5CPuAdaBVWXxPHc2p1N@dpg-ch95cjdgk4qeoo2f3o60-a.frankfurt-postgres.render.com/wordle_sfvy?ssl=true
+POSTGRES_DATABASE=ido_render_postgres
+POSTGRES_HOST=dpg-cioj65dgkuvh5ggcqp60-a.frankfurt-postgres.render.com
+POSTGRES_PASS=98RMrGEN8UA6W9BZhnTcGpY0vU1yg9NM
+POSTGRES_USER=ido_render_postgres
+POSTGRES_Internal_Database_URL=postgres://ido_render_postgres:98RMrGEN8UA6W9BZhnTcGpY0vU1yg9NM@dpg-cioj65dgkuvh5ggcqp60-a/ido_render_postgres
+POSTGRES_External_Database_URL=postgres://ido_render_postgres:98RMrGEN8UA6W9BZhnTcGpY0vU1yg9NM@dpg-cioj65dgkuvh5ggcqp60-a.frankfurt-postgres.render.com/ido_render_postgres?ssl=true
